Fixed up most issues - starting to test
