# handlers/handlers.go
@@ -1,7 +1,11 @@
 package handlers
 
 import (
+	"fmt"
+	"math/rand"
+
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/seanrmurphy/lambda-swagger-test/models"
 	"github.com/seanrmurphy/lambda-swagger-test/restapi/operations/open"
 )
 
@@ -12,97 +16,236 @@ func GetApiIdentifier(params open.GetAPIIdentifierParams) middleware.Responder {
 }
 
 func GetNoParamsEmptyResponse(params open.GetNoParamsEmptyResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	resp := open.NewGetNoParamsEmptyResponseOK()
 
 	return resp
 }
 
 func GetNoParamsSimpleResponse(params open.GetNoParamsSimpleResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	str := "Response from GetNoParamsSimpleResponse function"
+
+	r := models.SimpleMessageResponse{
+		Message: &str,
+	}
+	resp := open.NewGetNoParamsSimpleResponseOK().WithPayload(&r)
 
 	return resp
 }
 
 func GetNoParamsComplexResponse(params open.GetNoParamsComplexResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	stringArray := []string{"param1", "param2"}
+	descriptor := "A descriptive string (object1)"
+	intVal := rand.Int63()
+	o1 := models.SimpleObjectOne{
+		StringArray: stringArray,
+		Descriptor:  &descriptor,
+		IntVal:      &intVal,
+	}
+
+	descriptor = "A descriptive string (object2)"
+	intArray := []int64{rand.Int63(), rand.Int63(), rand.Int63(), rand.Int63()}
+	o2 := models.SimpleObjectTwo{
+		Descriptor: &descriptor,
+		IntArray:   intArray,
+	}
+	r := models.ComplexObjectResponse{
+		Object1:       &o1,
+		Object2:       &o2,
+		OptionalParam: rand.Int63(),
+	}
+	resp := open.NewGetNoParamsComplexResponseOK().WithPayload(&r)
 
 	return resp
 }
 
 func GetNoParamsErrorResponse(params open.GetNoParamsErrorResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	str := "Calling this endpoint (GetNoParamsErrorResponse) deliberately generates an error case."
+	randomInt := rand.Int63()
+
+	r := models.ErrorResponse{
+		ErrorNumber: &randomInt,
+		ErrorString: &str,
+	}
+	resp := open.NewGetNoParamsErrorResponseIMATeapot().WithPayload(&r)
 
 	return resp
 }
 
 func GetPathParamEmptyResponse(params open.GetPathParamEmptyResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	resp := open.NewGetPathParamEmptyResponseOK()
 
 	return resp
 }
 
 func GetPathParamSimpleResponse(params open.GetPathParamSimpleResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	pathParam := params.Param
+	str := fmt.Sprintf("Response from GetPathParamSimpleResponse function - input param = %v", pathParam)
+
+	r := models.SimpleMessageResponse{
+		Message: &str,
+	}
+	resp := open.NewGetPathParamSimpleResponseOK().WithPayload(&r)
 
 	return resp
 }
 
 func GetPathParamComplexResponse(params open.GetPathParamComplexResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	pathParam := params.Param
+	str := fmt.Sprintf("Input param = %v", pathParam)
+
+	stringArray := []string{"param1", "param2", str}
+	descriptor := "A descriptive string (object1)"
+	intVal := rand.Int63()
+	o1 := models.SimpleObjectOne{
+		StringArray: stringArray,
+		Descriptor:  &descriptor,
+		IntVal:      &intVal,
+	}
+
+	descriptor = "A descriptive string (object2)"
+	intArray := []int64{rand.Int63(), rand.Int63(), rand.Int63(), rand.Int63()}
+	o2 := models.SimpleObjectTwo{
+		Descriptor: &descriptor,
+		IntArray:   intArray,
+	}
+	r := models.ComplexObjectResponse{
+		Object1:       &o1,
+		Object2:       &o2,
+		OptionalParam: rand.Int63(),
+	}
+	resp := open.NewGetPathParamComplexResponseOK().WithPayload(&r)
 
 	return resp
 }
 
 func GetPathParamErrorResponse(params open.GetPathParamErrorResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	pathParam := params.Param
+	str := fmt.Sprintf("Calling this endpoint (GetPathParamErrorResponse) deliberately generates an error case - Input param = %v", pathParam)
+	randomInt := rand.Int63()
+
+	r := models.ErrorResponse{
+		ErrorNumber: &randomInt,
+		ErrorString: &str,
+	}
+	resp := open.NewGetPathParamErrorResponseIMATeapot().WithPayload(&r)
 
 	return resp
 }
 
 func GetBodyParamEmptyResponse(params open.GetBodyParamEmptyResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	str := "GET not implemented on this endpoint - please use POST instead."
+	randomInt := rand.Int63()
+
+	r := models.ErrorResponse{
+		ErrorNumber: &randomInt,
+		ErrorString: &str,
+	}
+	resp := open.NewGetBodyParamEmptyResponseNotImplemented().WithPayload(&r)
 
 	return resp
 }
 
 func PostBodyParamEmptyResponse(params open.PostBodyParamEmptyResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	// there are input parameters provided here, but since we cannot return them
+	// in any way, we just ignore them
+	resp := open.NewPostBodyParamEmptyResponseOK()
 
 	return resp
 }
 
 func GetBodyParamSimpleResponse(params open.GetBodyParamSimpleResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	str := "GET not implemented on this endpoint - please use POST instead."
+	randomInt := rand.Int63()
+
+	r := models.ErrorResponse{
+		ErrorNumber: &randomInt,
+		ErrorString: &str,
+	}
+	resp := open.NewGetBodyParamSimpleResponseNotImplemented().WithPayload(&r)
 
 	return resp
 }
 
 func PostBodyParamSimpleResponse(params open.PostBodyParamSimpleResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	inputParams := params.BodyParam
+	str := fmt.Sprintf("Response from PostBodyParamSimpleResponse function - called with JSON object {'descriptor': '%v', 'int_val': %v, 'string': '%v'}",
+		inputParams.Descriptor, inputParams.IntVal, inputParams.String)
+
+	r := models.SimpleMessageResponse{
+		Message: &str,
+	}
+	resp := open.NewPostBodyParamSimpleResponseOK().WithPayload(&r)
 
 	return resp
 }
 
 func GetBodyParamComplexResponse(params open.GetBodyParamComplexResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	str := "GET not implemented on this endpoint - please use POST instead."
+	randomInt := rand.Int63()
+
+	r := models.ErrorResponse{
+		ErrorNumber: &randomInt,
+		ErrorString: &str,
+	}
+	resp := open.NewGetBodyParamComplexResponseNotImplemented().WithPayload(&r)
 
 	return resp
 }
 
 func PostBodyParamComplexResponse(params open.PostBodyParamComplexResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	inputParams := params.BodyParam
+	str := fmt.Sprintf("Response from PostBodyParamSimpleResponse function - called with JSON object {'descriptor': '%v', 'int_val': %v, 'string': '%v'}",
+		inputParams.Descriptor, inputParams.IntVal, inputParams.String)
+
+	stringArray := []string{"param1", "param2", str}
+	descriptor := "A descriptive string (object1)"
+	intVal := rand.Int63()
+	o1 := models.SimpleObjectOne{
+		StringArray: stringArray,
+		Descriptor:  &descriptor,
+		IntVal:      &intVal,
+	}
+
+	descriptor = "A descriptive string (object2)"
+	intArray := []int64{rand.Int63(), rand.Int63(), rand.Int63(), rand.Int63()}
+	o2 := models.SimpleObjectTwo{
+		Descriptor: &descriptor,
+		IntArray:   intArray,
+	}
+	r := models.ComplexObjectResponse{
+		Object1:       &o1,
+		Object2:       &o2,
+		OptionalParam: rand.Int63(),
+	}
+	resp := open.NewPostBodyParamComplexResponseOK().WithPayload(&r)
 
 	return resp
 }
 
 func GetBodyParamErrorResponse(params open.GetBodyParamErrorResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	str := "GET not implemented on this endpoint - please use POST instead."
+	randomInt := rand.Int63()
+
+	r := models.ErrorResponse{
+		ErrorNumber: &randomInt,
+		ErrorString: &str,
+	}
+	resp := open.NewGetBodyParamErrorResponseNotImplemented().WithPayload(&r)
 
 	return resp
 }
 
 func PostBodyParamErrorResponse(params open.PostBodyParamErrorResponseParams) middleware.Responder {
-	resp := open.NewGetAPIIdentifierOK()
+	inputParams := params.BodyParam
+	str := fmt.Sprintf("Calling this endpoint (PostBodyParamErrorResponse) deliberately generates an error case - called with JSON object {'descriptor': '%v', 'int_val': %v, 'string': '%v'}",
+		inputParams.Descriptor, inputParams.IntVal, inputParams.String)
+	randomInt := rand.Int63()
+
+	r := models.ErrorResponse{
+		ErrorNumber: &randomInt,
+		ErrorString: &str,
+	}
+	resp := open.NewPostBodyParamErrorResponseIMATeapot().WithPayload(&r)
 
 	return resp
 }
